--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">XmlRuntime</string>
+    <string name="app_name">Voyager</string>
     <string name="choose_file">Choose File</string>
 </resources>
